manifests/kabootar-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kabootar
spec:
  selector:
    app: kabootar
  ports:
    - port: op://Secrets/kabootar.toml/port
      targetPort: op://Secrets/kabootar.toml/port
---
apiVersion: v1
kind: Service
metadata:
  name: kabootar-turn
spec:
  type: NodePort
  selector:
    app: kabootar
  ports:
    - port: op://Secrets/kabootar.toml/turn_port
      targetPort: op://Secrets/kabootar.toml/turn_port
      nodePort: op://Secrets/kabootar.toml/turn_port
      protocol: UDP
